# hyper2color

./: .gitignore  AUTHORS  Makefile.am  README  README.md  configure.ac
src/: CIE-A.c  CIE-D65.c  CIE-tristimulus.c  Makefile.am  color.c  color.h  hyper2color  hyper2color.c  hyspex.c  hyspex.h  icc.c
